secondfile/objects/Rate_PBI__c.object
<CustomObject>
    <fields>
        <fullName>Availability_Date__c</fullName>
        <label>Availability Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Rate_Plan_PBI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base Rate Plan PBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Element_Category__c</fullName>
        <label>Billing Element Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Element_Description__c</fullName>
        <label>Billing Element Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Element__c</fullName>
        <label>Billing Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_Plan_ID__c</fullName>
        <label>CIM Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_SFDC_ID__c</fullName>
        <externalId>true</externalId>
        <label>CI_SFDC_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Super_Set_ID__c</fullName>
        <label>Determinant Super Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounted_Already__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discounted Already</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Determinant_Super_Set_ID__c</fullName>
        <label>Fixed Determinant Super Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grand_Father_Date__c</fullName>
        <label>Grand Father Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_PBI_Id__c</fullName>
        <label>Old PBI Id</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Name__c</fullName>
        <label>PBI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Number__c</fullName>
        <label>PBI Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_PHI__c</fullName>
        <label>SFDC-PHI</label>
        <referenceTo>Rate_PHI__c</referenceTo>
        <relationshipLabel>Rate-PBIs</relationshipLabel>
        <relationshipName>Rate_PBIs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <label>Rate Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name__c</fullName>
        <label>Rate Plan Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Stability_Code__c</fullName>
        <label>Rate Stability Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Push_PBI__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SA-Push PBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <label>Service Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_Rate_Method__c</fullName>
        <label>Unit Rate Method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Rate-PBI</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PBI_Name__c</columns>
        <columns>PBI_Number__c</columns>
        <columns>Rate_Plan_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Determinant_Super_Set_ID__c</field>
            <operation>equals</operation>
            <value>00013700</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SFDC-{000000}</displayFormat>
        <label>SFDC-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate-PBIs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>